--- a/app/views/base/_sidebar.html.erb
+++ b/app/views/base/_sidebar.html.erb
@@ -1,23 +1,12 @@
 <!-- Main Sidebar Container -->
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <%= link_to root_path, class: "brand-link" do %>
+    <%= link_to home_path, class: "brand-link" do %>
       <%= image_tag("logo.png", class: "brand-image img-circle elevation-3", style: 'opacity: .8')%>
       <span class="brand-text font-weight-light"><%= I18n.t(:'app.name') %></span>
     <% end %>
-
     <!-- Sidebar -->
     <div class="sidebar">
-        <!-- Sidebar user panel (optional) -->
-<!--        <div class="user-panel mt-3 pb-3 mb-3 d-flex">-->
-<!--            <div class="image">-->
-              <%#= image_tag("avatar.png", class: "img-circle elevation-2", alt: 'User Image') %>
-<!--            </div>-->
-<!--            <div class="info">-->
-<!--                <a href="#" class="d-block">Alexander Pierce</a>-->
-<!--            </div>-->
-<!--        </div>-->
-
         <!-- Sidebar Menu -->
         <nav class="mt-2">
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
@@ -44,16 +33,27 @@
                             <p><%= I18n.t(:'demo.form') %></p>
                           <% end %>
                         </li>
+                        <li class="nav-item">
+                          <%= link_to demo_login_path, class: "nav-link #{'active' if active_link?(:demos, :login)}" do %>
+                            <i class="fas fa-sign-in-alt nav-icon"></i>
+                            <p><%= I18n.t(:'demo.login') %></p>
+                          <% end %>
+                        </li>
+                        <li class="nav-item">
+                          <%= link_to demo_landing_path, class: "nav-link #{'active' if active_link?(:demos, :landing)}" do %>
+                            <i class="fas fa-helicopter nav-icon"></i>
+                            <p><%= I18n.t(:'demo.landing') %></p>
+                          <% end %>
+                        </li>
                     </ul>
                 </li>
                 <li class="nav-item">
-                  <%= link_to root_path, class: "nav-link #{'active' if active_link?(:home, :index)}" do %>
+                  <%= link_to home_path, class: "nav-link #{'active' if active_link?(:home, :index)}" do %>
                     <i class="nav-icon fas fa-home"></i>
                     <p>
                       <%= I18n.t(:'home.title') %> <!-- <span class="right badge badge-danger">New</span>-->
                     </p>
                   <% end %>
-
                 </li>
             </ul>
         </nav>
