--- a/app/views/demos/login.html.erb
+++ b/app/views/demos/login.html.erb
@@ -1,2 +1,43 @@
-<h1>Demos#login</h1>
-<p>Find me in app/views/demos/login.html.erb</p>
+<body class="hold-transition lockscreen">
+<div class="lockscreen-wrapper">
+  <div class="" style="color: dimgrey"> <!-- card card-outline card-primary -->
+    <div class="card-header text-center">
+      <p class="h1"><b>Admin</b>Loco</p>
+    </div>
+    <!-- .card-body -->
+    <div class="card-body">
+      <form action="<%= '' %>" method="post">
+        <label for="employeeID">Email:</label>
+        <div class="input-group mb-3">
+          <input type="email" class="form-control" placeholder="Email">
+          <div class="input-group-append">
+            <div class="input-group-text">
+              <span class="fas fa-envelope"></span>
+            </div>
+          </div>
+        </div>
+        <label for="employeeID">Password:</label>
+        <div class="input-group mb-3">
+          <input type="password" class="form-control" placeholder="Password">
+          <div class="input-group-append">
+            <div class="input-group-text">
+              <span class="fas fa-lock"></span>
+            </div>
+          </div>
+        </div>
+        <div class="social-auth-links text-center mt-2 mb-3">
+          <a href="<%= home_path %>" class="btn btn-block btn-primary">
+            Sign in
+          </a>
+        </div>
+      </form>
+
+      <p class="mb-1">
+        <a href="#">I forgot my password</a>
+      </p>
+    </div>
+    <!-- /.card-body -->
+  </div>
+  <!-- /.card -->
+</div>
+</body>
