--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,34 +1,54 @@
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-12">
 
-<hr><div style="color: black">
-  <h1>
-    TODO: Vista demo <a href="https://adminlte.io/themes/v3/pages/tables/simple.html" target="_blank">index</a>
-  </h1>
-</div><br>
+      <label id="flabel" for="finput"></label>
+      <input type="text" id="finput" name="finput"><br><br>
 
-<hr><div style="color: grey">
-  <h1>
-    TODO: Implementar colorize
-  </h1>
-  <h1>
-    TODO: poner en home <a href="" target="_blank">herramienta para administrar tareas todo</a>
-  </h1>
-  <h1>
-    TODO: vista informativa basada en <a href="https://adminlte.io/themes/v3/pages/examples/e-commerce.html" target="_blank">e-commerce.html</a>
-  </h1>
-</div><br>
+      <hr>
+      <div style="color: black">
+        <h1>
+          TODO: Mejorar Home</a>
+        </h1>
+      </div>
+      <br>
 
-<hr><div style="color: lightgrey">
-  <h1>
-    TODO: Vista demo <a href="https://adminlte.io/themes/v3/pages/forms/general.html" target="_blank">formulario</a>
-  </h1>
-  <h1>
-    DONE: Migrar demos a su propio controlador
-  </h1>
+      <hr>
+      <div style="color: grey">
+        <h1>
+          TODO: Vista demo <a href="">show</a>
+        </h1>
+        <h1>
+          TODO: Vista demo <a href="">notices</a>
+        </h1>
+        <h1>
+          TODO: Implementar colorize
+        </h1>
+        <h1>
+          TODO: vista informativa basada en <a href="https://adminlte.io/themes/v3/pages/examples/e-commerce.html" target="_blank">e-commerce.html</a>
+        </h1>
+      </div>
+      <br>
+
+      <hr>
+      <div style="color: lightgrey">
+        <h1>
+          TODO: Vista demo <a href="">landing</a>
+        </h1>
+        <h1>
+          TODO: Vista demo <a href="">login</a>
+        </h1>
+        <h1>
+          TODO: Vista demo <a href="https://adminlte.io/themes/v3/pages/tables/simple.html" target="_blank">index</a>
+        </h1>
+        <h1>
+          TODO: Vista demo <a href="https://adminlte.io/themes/v3/pages/forms/general.html" target="_blank">formulario</a>
+        </h1>
+        <h1>
+          DONE: Migrar demos a su propio controlador
+        </h1>
+      </div>
+
+    </div>
+  </div>
 </div>
-
-<h1 id="hindexjs"></h1>
-
-<label id="flabel" for="finput"></label>
-<input type="text" id="finput" name="finput"><br><br>
-
-<%= javascript_pack_tag 'clog', defer: true %>
