Start vue_rails implementation

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,13 @@
 
       <label id="flabel" for="finput"></label>
       <input type="text" id="finput" name="finput"><br><br>
+
+      <br>
       <hr>
+      <%= vue_component("hello") %>
+
+      <hr>
+      <br>
 
       <div class="row">
         <div class="col-12">
